# Social-Discourse-Analysis

./: README.md  experiments.py  predictions.py  pyproject.toml  train.py  utils.py
src/subtask1/: data_setup.py  engine.py  model_builder.py
wandb/: latest-run
wandb/offline-run-20251123_142449-24ctw0gs/: run-24ctw0gs.wandb
wandb/offline-run-20251123_142449-24ctw0gs/files/: requirements.txt
